--- a/.github/workflows/test-pr-e2e.yml
+++ b/.github/workflows/test-pr-e2e.yml
@@ -91,6 +91,7 @@ jobs:
   # Build images in parallel
   build-frontend:
     runs-on: ubuntu-latest
+    if: github.event_name != 'pull_request' || github.event.pull_request.base.ref == 'development'
     outputs:
       image_name: ${{ steps.set-image-name.outputs.image_name }}
     permissions:
@@ -219,6 +220,7 @@ jobs:
 
   build-backend:
     runs-on: ubuntu-latest
+    if: github.event_name != 'pull_request' || github.event.pull_request.base.ref == 'development'
     outputs:
       image_name: ${{ steps.set-image-name.outputs.image_name }}
     permissions:
