--- a/keep-ui/package.json
+++ b/keep-ui/package.json
@@ -117,7 +117,9 @@
     "@types/jest": "^29.5.14",
     "@types/lodash.debounce": "^4.0.9",
     "@types/node": "^20.2.1",
+    "@types/react": "^19.2.2",
     "@types/react-datepicker": "^6.0.2",
+    "@types/react-dom": "^19.2.2",
     "@types/react-grid-layout": "^1.3.5",
     "@types/react-timeago": "^4.1.7",
     "@types/uuid": "^10.0.0",
